--- a/zuul.yaml
+++ b/zuul.yaml
@@ -4,6 +4,10 @@
     default-branch: main
     templates:
       - helpcenter-base-jobs
+    vars:
+      sphinx_pdf_files:
+        - apm-api-ref.pdf
+        - apm-umn.pdf
     check:
       jobs:
         - noop
